TEST_PROGRAMS/INVALID/04/83.go
package main

func main() {
    var a = 2
    // Illegal expression as statement
    a.b
}
